Added icons and edited about page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -24,6 +24,10 @@ $face-back:  #e9ebee;
   padding-left: 0;
 }
 
+.pl-6 {
+  padding-left: 6px;
+}
+
 .pl-10 {
   padding-left: 10px;
 }
@@ -180,7 +184,6 @@ header {
   padding-bottom: 20px;
 }
 
-.static-pages-text {
-  font-size: 25px;
-  padding-left: 30px;
+.icons {
+  font-size: 20px;
 }
