--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,6 +2,20 @@
   <%= render 'user/user_aside' %>
   <div class="col-md-8">
     <h1 class="text-center pb-50">Contact</h1>
-    <p class="static-pages-text">This page was created by Alexawesome and Phalado</p>
+    <p class="static-pages-text">This page was created by Alexawesome and Phalado.</p>
+    <p class="static-pages-text">Find us in our social medias and personal pages:</p>
+    <div>
+      <p class="static-pages-text">Alexawesomecode: 
+        <a href="https://github.com/alexawesomecode" target="_blank"><i class="fab fa-github-square icons-60 github"></i></a>
+        <a href="https://twitter.com/alexcode0" target="_blank"><i class="fab fa-twitter-square icons-60 twitter"></i></a>
+        <a href="https://www.linkedin.com/in/alejandro-andres-126592191/" target="_blank"><i class="fab fa-linkedin icons-60 linkedin"></i></a>
+      </p>
+      <p class="static-pages-text">Phalado: 
+        <a href="https://github.com/phalado/" target="_blank"><i class="fab fa-github-square icons-60 github"></i></a>
+        <a href="https://twitter.com/Phalado" target="_blank"><i class="fab fa-twitter-square icons-60 twitter"></i></a>
+        <a href="https://www.linkedin.com/in/raphael-cordeiro/" target="_blank"><i class="fab fa-linkedin icons-60 linkedin"></i></a>
+        <a href="https://medium.com/@phalado" target="_blank"><i class="fab fa-medium icons-60 medium"></i></a>
+      </p>
+    </div>
   </div>
 </div>
