--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-8">
     <h1 class="text-center pb-50">Help you (to help us)</h1>
     <p class="static-pages-text">This is an open-source project.</p>
-    <p class="static-pages-text">Want to help us? Visit this project's <a href="https://github.com/alexawesomecode/facebook-clone-project" target="_blank">repository</a>.</p>
-    <p class="static-pages-text">Found any bug or any problem? Open an <a href="https://github.com/alexawesomecode/facebook-clone-project/issues/new" target="_blank">issue</a>.</p>
+    <p class="static-pages-text">Want to help us? Visit this project's <a href="https://github.com/alexawesomecode/facebook-clone-project" target="_blank" class="pl-6"> repository</a>.</p>
+    <p class="static-pages-text">Have a sugestion, found any bug or any problem? Open an <a href="https://github.com/alexawesomecode/facebook-clone-project/issues/new" target="_blank" class="pl-6"> issue</a>.</p>
   </div>
 </div>
