--- a/app/views/user/_user_profile.html.erb
+++ b/app/views/user/_user_profile.html.erb
@@ -3,8 +3,7 @@
     <span class="pr-10"><%= gravatar_for user, size: 150 %></span>
     <ul>
       <li><h4>
-        <%= user.first_name %>
-        <%= user.last_name %>
+        <%= user.name %>
       </h4></li>
       <li><h5><%= user.email %></h5></li>
       <li>
