--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -3,8 +3,7 @@
     <section class="user_info user-space text-center">
       <h1><%= gravatar_for @user %></h1>
       <h1>
-        <%= @user.first_name %>
-        <%= @user.last_name %>
+        <%= @user.name %>
       </h1>
       <h3><%= @user.email %></h3>
       <% if @user.birthday %>
