--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -51,25 +51,25 @@ $face-back:  #e9ebee;
 .alert-success {
   color: #1e6641;
   background-color: #d8f3e5;
-  border-color: #c8eedb;
+  border-color: #1e6641;
 }
 
 .alert-notice {
   color: #0c5460;
   background-color: #d1ecf1;
-  border-color: #bee5eb;
+  border-color: #0c5460;
 }
 
 .alert-danger {
   color: #721c24;
   background-color: #f8d7da;
-  border-color: #f5c6cb;
+  border-color: #721c24;
 }
 
 .alert-alert {
   color: #004085;
   background-color: #cce5ff;
-  border-color: #b8daff;
+  border-color: #004085;
 }
 
 header {
@@ -186,4 +186,31 @@ header {
 
 .icons {
   font-size: 20px;
+}
+
+.fb-btn-div {
+  width: 80%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.facebook-btn {
+  width: 100%;
+  height: 35px;
+  border-radius: 4px;
+  background: #3b5998;
+  color:white;
+  border: 0px transparent;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover{
+    background: #3b5998;
+    opacity: 0.6;
+  }
 }
