--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,8 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+    <div class="fb-btn-div"><%= link_to "<i class='fab fa-facebook-f pr-10'></i> Sign in with #{OmniAuth::Utils.camelize(provider)}".html_safe, 
+        omniauth_authorize_path(resource_name, provider), 
+        class: "facebook-btn" %></div>
   <% end %>
 <% end %>
