--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <%= render 'user/user_aside' %>
   <div class="col-md-8">
-    <%= render 'layouts/post_new' %>
+    <%= render 'layouts/post_new', :post_content => "Nothing here" %>
     <%= render 'posts/posts_with_comments', :posts => @posts %>
   </div>
 </div>
