--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,31 +1,3 @@
-.static-pages-text {
-  font-size: 25px;
-  padding-left: 30px;
-  display: flex;
-  align-items: center;
-}
-.icons-60 {
-  font-size: 60px;
-  padding-left: 30px;
-  color: grey;
-}
-
-.icon-grey {
-  color: grey;
-}
-
-.medium:hover {
-  color: black;
-}
-
-.twitter:hover {
-  color: #1da1f2;
-}
-
-.linkedin:hover {
-  color: #007bb5;
-}
-
-.github:hover {
-  color: #211F1F;
-}
+// Place all the styles related to the StaticPages controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: https://sass-lang.com/
