--- a/app/views/user/_user_profile.html.erb
+++ b/app/views/user/_user_profile.html.erb
@@ -21,11 +21,11 @@
                                                                                  :receiver => user.id }), method: :post %>
         <% elsif friendship_status(user) == 'wasrequested' %>
           <%= link_to 'Accept', edit_friendship_path(get_friendship(user).id) %> |
-          <%= link_to 'Reject', friendship_path(get_friendship(user).id), method: :delete %>
+          <%= link_to 'Reject', edit_friendship_path(get_friendship(user).id) %>
         <% elsif friendship_status(user) == 'irequested' %>
           <%= link_to 'Cancel request', friendship_path(get_friendship(user).id), method: :delete %>
         <% elsif friendship_status(user) == 'friends' %>
-          <%= link_to 'Unfriend', friendship_path(get_friendship(user).id), :data => { :confirm => 'Are you sure?' }, method: :delete %>
+          <%= link_to 'Unfriend', friendship_path(get_friendship(user).id), :onclick => "#{ "confirm('Are you sure?')" }", method: :delete %>
         <% end %>
       </li>
     </ul>
