worked on tests

--- a/app/views/layouts/_post_new.html.erb
+++ b/app/views/layouts/_post_new.html.erb
@@ -2,7 +2,7 @@
   <div class="new-post">
     <%= form_for(:post, url: posts_new_path) do |f| %>
       <%= f.label 'Tell me everything:' %>
-      <%= f.text_area :content, class: "post-area form-control", autofocus: true, :value => post_content %>
+      <%= f.text_area :content, class: "post-area form-control", autofocus: true%>
 
       <span class="picture post-images">
         <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', class: "btn" %>
