--- a/app/views/user/_user_profile.html.erb
+++ b/app/views/user/_user_profile.html.erb
@@ -1,6 +1,10 @@
 <div class="col-md-4 col-sm-6">
   <div class="user-block">
-    <span class="pr-10"><%= gravatar_for user, size: 150 %></span>
+    <% if user.image %>
+      <span class="pr-10"><%= user.image %></span>
+    <% else %>
+      <span class="pr-10"><%= gravatar_for user, size: 150 %></span>
+    <% end %>
     <ul>
       <li><h4>
         <%= user.name %>
