Final commit with changes in the name.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar top-navbar">
   <div class="container">
-    <%= link_to "Fakebook - Our Facebook Clone", root_path, class: "header-link p-15" %>
+    <%= link_to "FriendsNet - Our Facebook Clone", root_path, class: "header-link p-15" %>
     <nav class="elements-to-right">
       <ul class="nav navbar-nav">
         <li><%= link_to "All users", user_index_path, class: "header-link" %></li>
