--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class='row'>
   <div class="bottom-navbar text-center">
     <div class="col-md-12">
-      Fakebook - Our Facebook Clone
+      FriendsNet - Our Facebook Clone
       <div class="pt-5">
         <%= link_to 'About',   about_path,   :class => 'navbar-link' %> |
         <%= link_to 'Help',    help_path,    :class => 'navbar-link' %> |
