Some 'fix' in the password problem

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -72,6 +72,10 @@ $face-back:  #e9ebee;
   border-color: #004085;
 }
 
+.display-none {
+  display: none;
+}
+
 header {
   background-color: $face-color;
 
