--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,33 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4 bg-white pb-20">
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <% if current_user.birthday == Date.today %>
+
+      <h2>Welcome <% current_user.name %>.</h2>
+      <h3>Please, create a new password, you may need it in the future.</h3>
+
+    <% else %>
+
+      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+    <% end %>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
+
+      <% if current_user.birthday == Date.today %>
+
+        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+
+        <%= f.label :current_password, class: 'display-none' %>
+        <%= f.password_field :current_password, autocomplete: "password", class: 'form-control display-none', :value => '123456' %>
+
+        <%= f.submit "Update", class: "btn btn-primary form-control" %>
+
+      <% else %>
 
         <%= f.label :email %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
@@ -28,18 +52,23 @@
         <%= f.password_field :current_password, autocomplete: "password", class: 'form-control' %>
 
         <%= f.submit "Update", class: "btn btn-primary form-control" %>
+
+      <% end %>
     <% end %>
 
-    <div class="gravatar_edit text-center avatar-div">
-      <dir class="pl-0"><span class="avatar-img">Click on the image to change the avatar</span></dir>
-      <a href="http://gravatar.com/emails" target="_blank" class="avatar-text"><%= gravatar_for @user %></a></span>
-    </div>
+    <% unless current_user.birthday == Date.today %>
+      <div class="gravatar_edit text-center avatar-div">
+        <dir class="pl-0"><span class="avatar-img">Click on the image to change the avatar</span></dir>
+        <a href="http://gravatar.com/emails" target="_blank" class="avatar-text"><%= gravatar_for @user %></a></span>
+      </div>
 
-    <h4 class="cancel-account">Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></h3>
+      <h4 class="cancel-account">Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></h3>
 
-    <div class="text-center"></div>
+      <div class="text-center"></div>
 
-    <%= link_to "Back", :back, class: "btn btn-primary form-control mt-20" %>
+      <%= link_to "Back", :back, class: "btn btn-primary form-control mt-20" %>
+
+    <% end %>
 
   </div>
 </div>
