--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Forgot password') %>
 <div class="row">
   <div class="col-md-4 col-md-offset-4 bg-white pb-20">
     <h2>Forgot your password?</h2>
