--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'All users') %>
 <div class="row">
   <% @users.each do |user| %>
     <%= render 'user/user_profile', :user => user %>
