--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info user-space text-center">
