--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Confirmation instructions') %>
 <div class="row">
   <div class="col-md-4 col-md-offset-4 bg-white pb-20">
     <h2>Resend confirmation instructions</h2>
