--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Edit profile') %>
 <div class="row">
   <div class="col-md-4 col-md-offset-4 bg-white pb-20">
     <h2>Edit profille</h2>
