--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Edit post') %>
 <div class="row">
   <div class="new-post">
     <%= form_for(:post, url: post_path, method: :patch) do |f| %>
