--- a/app/views/user/_user_profile_small.html.erb
+++ b/app/views/user/_user_profile_small.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-sm-6">
+<div class="col-md-12 col-lg-6">
   <div class="user-block user-block-small">
     <span class=""><%= gravatar_for user, size: 100 %></span>
     <ul class="pl-0">
